@@ -1,0 +1,9 @@
+/* Just enough to get suckless to compile.
+ */
+#ifndef _LINUX_SOCKET_H_
+#define _LINUX_SOCKET_H_
+
+typedef unsigned short __kernel_sa_family_t;
+
+#endif /* _LINUX_SOCKET_H_ */
+
