@@ -1,0 +1,4 @@
+#ifndef _LINUX_TYPES_H_
+#define _LINUX_TYPES_H_
+
+#endif /* _LINUX_TYPES_H_ */
